--- a/app/TodoREST/Views/TodoListPage.xaml
+++ b/app/TodoREST/Views/TodoListPage.xaml
@@ -13,14 +13,15 @@
         </ToolbarItem>
     </ContentPage.ToolbarItems>
     <CollectionView x:Name="collectionView"
-                    Margin="20"
+                    Margin="5"
                     SelectionMode="Single">
         <CollectionView.ItemTemplate>
             <DataTemplate>
-                <Grid Padding="20,0,0,0"
+                <Grid Padding="5,0,0,0"
                       ColumnDefinitions="0.9*, 0.1*">
                     <Label Text="{Binding productTitle}" 
-                           VerticalTextAlignment="Center" />
+                           VerticalTextAlignment="Center"
+                           FontSize="Medium" />
                 </Grid>
             </DataTemplate>
         </CollectionView.ItemTemplate>
