--- a/app/TodoREST/Views/TodoListPage.xaml
+++ b/app/TodoREST/Views/TodoListPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="TodoREST.Views.TodoListPage"
-             Title="Todo">
+             Title="DVDs">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add Item" Clicked="OnAddItemClicked">
             <ToolbarItem.IconImageSource>
