#6 Fix activity title.

--- a/app/TodoREST/Views/DvdItemPage.xaml
+++ b/app/TodoREST/Views/DvdItemPage.xaml
@@ -73,11 +73,9 @@
             <Label Text="Formato do produto" />
             <Entry Text="{Binding Path=DvdItem.format}" 
                Placeholder="Este produto está disponível no formato Físico ou Digital?" />
-            <Button Text="Save" 
+            <Button Text="Adicionar" 
                 Clicked="OnSaveButtonClicked" />
-            <Button Text="Delete"
-                Clicked="OnDeleteButtonClicked" />
-            <Button Text="Cancel" 
+            <Button Text="Cancelar" 
                 Clicked="OnCancelButtonClicked" />
         </VerticalStackLayout>
     </ScrollView>
