--- a/app/TodoREST/Views/DvdItemPage.xaml
+++ b/app/TodoREST/Views/DvdItemPage.xaml
@@ -3,6 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="TodoREST.Views.DvdItemPage" 
              Title="DVD">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add Photo" Clicked="OnAddPhotoClicked">
+            <ToolbarItem.IconImageSource>
+                <OnPlatform x:TypeArguments="ImageSource">
+                    <On Platform="Android, WinUI" Value="sunrise.png" />
+                </OnPlatform>
+            </ToolbarItem.IconImageSource>
+        </ToolbarItem>
+    </ContentPage.ToolbarItems>
     <ContentPage.Resources>
         <Style TargetType="Label">
             <Setter Property="Margin"
@@ -37,7 +46,8 @@
                Placeholder="Entre com a quantidade de itens disponíveis" />
 
             <Label Text="Imagens do produto" />
-            <Entry Text="{Binding Path=DvdItem.images}" 
+            <Entry x:Name="dvdImages"
+               Text="{Binding Path=DvdItem.images}" 
                Placeholder="Entre com URLs de imagens do produto separadas por espaço" />
 
             <Label Text="Vídeo do produto" />
