Add new button to capture images from camera.
The Windows version of the app is not working to get images from camera, so I am letting both options to upload an image. This way the developer can test more easily this feature, just ignoring the camera button.

--- a/app/TodoREST/Views/DvdItemPage.xaml
+++ b/app/TodoREST/Views/DvdItemPage.xaml
@@ -11,6 +11,13 @@
                 </OnPlatform>
             </ToolbarItem.IconImageSource>
         </ToolbarItem>
+        <ToolbarItem Text="Take Photo" Clicked="OnTakePhotoClicked">
+            <ToolbarItem.IconImageSource>
+                <OnPlatform x:TypeArguments="ImageSource">
+                    <On Platform="Android, WinUI" Value="plus.png" />
+                </OnPlatform>
+            </ToolbarItem.IconImageSource>
+        </ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Resources>
         <Style TargetType="Label">
